test commit of gap fix

--- a/less/template-styles.less
+++ b/less/template-styles.less
@@ -24,7 +24,7 @@ body {
 .template-content {
   border-left: 10px solid @border-color;
   border-right: 10px solid @border-color;
-  margin-bottom: -4px;
+  margin-bottom: -10px;
 }
 
 .template-footer {
